Allow gzip files

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"vitest-browser-svelte": "^2.0.2"
 	},
 	"dependencies": {
-		"leaflet": "^1.9.4"
+		"leaflet": "^1.9.4",
+		"pako": "^2.1.0"
 	}
 }
